--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "vue-loader": "^15.6.4",
-    "vue-template-compiler": "^2.6.7",
-    "vuex": "^3.1.0"
+    "vue-template-compiler": "^2.6.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
