--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^2.0.0",
     "vue-loader": "^15.6.4",
     "vue-template-compiler": "^2.6.7"
   },
