--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "vue": "^2.6.10",
-    "vue-material-design-icons": "^3.2.0"
-  },
-  "devDependencies": {
+    "vue-material-design-icons": "^3.2.0",
     "@babel/core": "^7.4.5",
     "@storybook/vue": "^5.1.3",
     "babel-loader": "^8.0.6",
