--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
     "eslint": "^5.16.0",
+    "eslint-config-apostrophe": "^3.1.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.20.1",
