--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "vue-template-compiler": "^2.6.11"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx eslint .",
     "storybook": "start-storybook -s ./public -p 9001 -c .storybook"
   },
   "repository": {
