--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@babel/core": "^7.8.7",
+    "@storybook/addon-contexts": "^5.3.17",
     "@storybook/vue": "^5.3.17",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
