--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "scripts": {
     "test": "npx eslint .",
-    "storybook": "start-storybook -s ./public -p 9001 -c .storybook"
+    "storybook": "start-storybook -s ./public -p 9001 -c .storybook",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "repository": {
     "type": "git",
@@ -38,5 +39,8 @@
   "bugs": {
     "url": "https://github.com/apostrophecms/apostrophe-storybook/issues"
   },
-  "homepage": "https://github.com/apostrophecms/apostrophe-storybook#readme"
+  "homepage": "https://github.com/apostrophecms/apostrophe-storybook#readme",
+  "devDependencies": {
+    "@storybook/storybook-deployer": "^2.8.3"
+  }
 }
