--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@babel/core": "^7.8.7",
+    "@storybook/addon-a11y": "^5.3.17",
     "@storybook/addon-contexts": "^5.3.17",
     "@storybook/addon-knobs": "^5.3.17",
     "@storybook/vue": "^5.3.17",
