--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "test": "npx eslint .",
     "storybook": "start-storybook -s ./public -p 9001 -c .storybook",
-    "deploy-storybook": "storybook-to-ghpages -- --out=.out",
+    "deploy-storybook": "npm run build-storybook && storybook-to-ghpages -- --out=.out",
     "build-storybook": "build-storybook -s ./public -o .out"
   },
   "repository": {
