--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "lorem-ipsum": "^2.0.3",
     "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
     "sass-resources-loader": "^2.0.1",
